--- a/ordineo/src/profile/components/about/about-directive-styles.scss
+++ b/ordineo/src/profile/components/about/about-directive-styles.scss
@@ -68,4 +68,17 @@ profile-about {
       margin-bottom: 5px;
     }
   }
+
+  .md-datepicker-button {
+    display: none !important;
+  }
+
+  .md-datepicker-input-container {
+    margin-left: 0 !important;
+  }
+
+  md-input-container {
+    padding: 0;
+    margin: 0;
+  }
 }
