--- a/ordineo/src/layout/header/header.html
+++ b/ordineo/src/layout/header/header.html
@@ -1,9 +1,24 @@
 <div layout="row" class="header-bg">
   <div flex layout="column" layout-align="center center">
     <span><strong>ORDINEO</strong></span>
-    <div id="search" layout="row" layout-align="center center">
-      <input type="text" placeholder="What/who are you trying to find?">
-      <md-icon md-svg-icon="{{$ctrl.button.icon}}"></md-icon>
+    <div id="search" >
+      <md-autocomplete
+        md-selected-item="$ctrl.selectedItem"
+        md-search-text-change="$ctrl.searchTextChange($ctrl.searchText)"
+        md-search-text="$ctrl.searchText"
+        md-selected-item-change="$ctrl.selectedItemChange(item)"
+        md-items="item in $ctrl.querySearch($ctrl.searchText)"
+        md-item-text="item.display"
+        md-min-length="0"
+        placeholder="Zoek gebruiker">
+        <md-item-template>
+          <span md-highlight-text="$ctrl.searchText" md-highlight-flags="^i">{{item.display}}</span>
+        </md-item-template>
+        <md-not-found>
+          "{{$ctrl.searchText}}" levert geen resultaten op.
+        </md-not-found>
+      </md-autocomplete>
+      <!--<md-icon md-svg-icon="{{$ctrl.button.icon}}"></md-icon>-->
     </div>
   </div>
 </div>
