Remove md maxlength

--- a/ordineo/src/profile/components/about/about-directive-template.html
+++ b/ordineo/src/profile/components/about/about-directive-template.html
@@ -157,7 +157,7 @@
               <textarea name="userDescription"
                         required
                         ng-model="about.employee.description"
-                        md-maxlength="2048"
+                        maxlength="2048"
                         ng-maxlength="2048"
                         md-select-on-focus>
               </textarea>
