--- a/ordineo/assets/styles/main.scss
+++ b/ordineo/assets/styles/main.scss
@@ -30,3 +30,42 @@ section[ui-view] {
 .translate-whitespace{
   white-space: pre-line;
 }
+img {
+  font-family: 'NeutraTextBook';
+  font-weight: 300;
+  line-height: 2;
+  text-align: center;
+
+  width: 100%;
+  height: auto;
+  display: block;
+  position: relative;
+}
+img:before {
+  content: " ";
+  display: block;
+
+  position: absolute;
+  top: -10px;
+  left: 0;
+  height: calc(100% + 10px);
+  width: 100%;
+  background-color: rgb(230, 230, 230);
+  border: 2px dotted rgb(200, 200, 200);
+  border-radius: 5px;
+}
+
+img:after {
+  content: "\f127";
+  display: block;
+  font-size: 16px;
+  font-style: normal;
+  font-family: FontAwesome;
+  color: rgb(100, 100, 100);
+
+  position: absolute;
+  top: 5px;
+  left: 0;
+  width: 100%;
+  text-align: center;
+}
