--- a/webpack/templates/build.html
+++ b/webpack/templates/build.html
@@ -77,7 +77,9 @@
         stroke: #ffa700;
       }
     }
+
   </style>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
 <body>
 <div class="showbox" ng-if="false">
