Fix positioning columns

--- a/ordineo/src/profile/components/about/about-directive-styles.scss
+++ b/ordineo/src/profile/components/about/about-directive-styles.scss
@@ -69,6 +69,13 @@ profile-about {
     }
   }
 
+  .positioning-center-column {
+    margin-top: 10px;
+  }
+  .positioning-right-column {
+    margin-top: 30px;
+  }
+
   .md-datepicker-button {
     display: none !important;
   }
