--- a/ordineo/src/profile/components/about/about-directive-template.html
+++ b/ordineo/src/profile/components/about/about-directive-template.html
@@ -98,7 +98,7 @@
           </div>
 
           <!-- Center column: Overview -->
-          <div flex="30" layout="column">
+          <div flex="30" layout="column" class="positioning-center-column">
             <div class="about-job">
 
               <!-- Function -->
@@ -150,7 +150,7 @@
           </div>
 
           <!-- Right column: Description -->
-          <div flex="45" flex-gt-sm="70" class="about-description">
+          <div flex="45" flex-gt-sm="70" class="about-description positioning-right-column">
             <div>
               <md-input-container class="md-block" flex-gt-xs>
                 <label>Description</label>
