--- a/ordineo/src/profile/components/about/about-directive-template.html
+++ b/ordineo/src/profile/components/about/about-directive-template.html
@@ -31,7 +31,7 @@
         <div class="about-content" layout="row" layout-xs="column" ng-if="!about.isEditModeEnabled">
 
           <!-- Left column: Picture -->
-          <div flex="25" class="about-img" layout="row" layout-align="start top" layout-align-xs="center center">
+          <div flex="25" class="about-img" layout="column" layout-align="start top" layout-align-xs="center center">
             <img ng-src="{{about.profilePicture}}" alt="Profile picture" class="sample">
           </div>
 
@@ -90,11 +90,15 @@
 
         <!-- Edit info -->
 
-        <div class="about-content" layout="row" layout-xs="column" ng-if="about.isEditModeEnabled">
+        <div class="about-content edit-info" layout="row" layout-xs="column" ng-if="about.isEditModeEnabled">
 
           <!-- Left column: Picture -->
-          <div flex="25" class="about-img" layout="row" layout-align="start top" layout-align-xs="center center">
+          <div class="about-img" layout="column" layout-align="start top" layout-align-xs="center center">
             <img ng-src="{{about.profilePicture}}" alt="Profile picture" class="sample">
+            <form method='POST' action='https://image-ordina.cfapps.io/api/images/{{about.username}}' enctype='multipart/form-data'>
+              <input id="uploadPictureDialogBox" type="file" name="uploadPictureDialogBox" />
+              <input id="submit" type="submit" />
+            </form>
           </div>
 
           <!-- Center column: Overview -->
