Renamed header title

--- a/ordineo/src/layout/header/header.html
+++ b/ordineo/src/layout/header/header.html
@@ -1,6 +1,6 @@
 <div layout="row" class="header-bg">
   <div flex layout="column" layout-align="center center">
-    <span><strong>ORDINEO</strong></span>
+    <span><strong>Jworks 360</strong></span>
     <div id="search" >
       <md-autocomplete
         md-selected-item="$ctrl.selectedItem"
