--- a/ordineo/src/profile/components/about/about-directive-template.html
+++ b/ordineo/src/profile/components/about/about-directive-template.html
@@ -91,7 +91,14 @@
           <!-- Left column: Picture -->
           <div class="about-img" layout="column" layout-align="start top" layout-align-xs="center center">
             <img ng-src="{{about.profilePicture}}" alt="Profile picture" class="sample">
-            <input type="file" name="profilePicture" file-model="about.myFile"/>
+
+            <!-- Original -->
+            <!--<input type="file" name="profilePicture" file-model="about.myFile"/>-->
+
+            <div class="inputWrapper">
+              Choose File
+              <input class="fileInput hidden" type="file" name="profilePicture" file-model="about.myFile"/>
+            </div><br/>
             <input id="submit" type="submit" ng-click="about.changePicture()" value="Upload"/>
           </div>
 
