Setup e2e test about

--- a/ordineo/src/core/components/card-header/card-header-template.html
+++ b/ordineo/src/core/components/card-header/card-header-template.html
@@ -18,6 +18,7 @@
         </md-button>
       </div>
       <md-button
+        class="btnEdit"
         ng-click="$ctrl.editMode()"
         ng-show="$ctrl.showBtnEdit"
         class="md-icon-button simple-fade">
