--- a/ordineo/src/profile/components/about/about-directive-template.html
+++ b/ordineo/src/profile/components/about/about-directive-template.html
@@ -104,7 +104,7 @@
                 <div>
                   <md-input-container class="md-block" flex-gt-xs>
                     <label>Function</label>
-                    <input required name="userFunctie" ng-model="about.employee.function">
+                    <input required class="userFunctie" name="userFunctie" ng-model="about.employee.function">
                   </md-input-container>
                 </div>
               </div>
