Added e2e test on profile page

--- a/ordineo/src/core/components/card-header/card-header-template.html
+++ b/ordineo/src/core/components/card-header/card-header-template.html
@@ -7,7 +7,7 @@
           aria-label="Save"
           ng-show="$ctrl.showBtnSave"
           ng-click="$ctrl.save()"
-          class="md-icon-button md-warn ">
+          class="btnSave md-icon-button md-warn ">
           <md-icon md-svg-src="act:done"></md-icon>
         </md-button>
         <md-button
