--- a/ordineo/src/profile/components/about/about-directive-template.html
+++ b/ordineo/src/profile/components/about/about-directive-template.html
@@ -92,7 +92,7 @@
 
             <!-- Original -->
             <!--<input type="file" name="profilePicture" file-model="about.myFile"/>-->
-            <div class="inputWrapper">
+            <div class="inputWrapper" ng-click="about.test()">
               Choose File
               <input class="fileInput hidden" type="file" name="profilePicture" file-model="about.myFile"/>
             </div>
