--- a/ordineo/src/core/components/card-header/card-header-template.html
+++ b/ordineo/src/core/components/card-header/card-header-template.html
@@ -13,7 +13,7 @@
         <md-button
           ng-click="$ctrl.cancel()"
           ng-show="$ctrl.showBtnCancel"
-          class="md-icon-button btn-red">
+          class="btnCancel md-icon-button btn-red">
           <md-icon md-svg-src="act:highlight_off"></md-icon>
         </md-button>
       </div>
