creating milestonecomponent and timelinecomponent

--- a/src/app/core/route/states/profile/profile-state.html
+++ b/src/app/core/route/states/profile/profile-state.html
@@ -6,4 +6,6 @@
     </div>
   </div>
   <profile-about username="{{profile.username}}"></profile-about>
+  <timeline username="{{profile.username}}"></timeline>
+  <h1></h1>
 </div>
