Created mock data Created timeline service Add templates

--- a/src/app/profile/components/timeline/TimelineComponent-template.html
+++ b/src/app/profile/components/timeline/TimelineComponent-template.html
@@ -2,7 +2,14 @@
   <card-header
     title="{{$ctrl.title}}">
   </card-header>
+
+
+
   <ul>
-    <milestone ng-repeat="milestone in $ctrl.milestones"></milestone>
+    <div layout="row">
+      <milestone clasmilestone="mile" ng-repeat="mile in $ctrl.milestones">
+      </milestone>
+    </div>
   </ul>
+
 </md-card>
