fix milestone template

--- a/src/app/profile/components/timeline/TimelineComponent-template.html
+++ b/src/app/profile/components/timeline/TimelineComponent-template.html
@@ -7,7 +7,7 @@
 
   <ul>
     <div layout="row">
-      <milestone clasmilestone="mile" ng-repeat="mile in $ctrl.milestones">
+      <milestone milestone="mile" ng-repeat="mile in $ctrl.milestones">
       </milestone>
     </div>
   </ul>
