--- a/src/app/core/route/states/profile/profile-state.html
+++ b/src/app/core/route/states/profile/profile-state.html
@@ -5,6 +5,6 @@
       <linkedin flex="20" username="{{profile.username}}"></linkedin>
     </div>
   </div>
-  <!--<profile-about username="{{profile.username}}"></profile-about>-->
+  <profile-about username="{{profile.username}}"></profile-about>
   <timeline username="{{profile.username}}"></timeline>
 </div>
