Fixing karma and e2e tests

--- a/src/app/core/components/card-header/card-header-template.html
+++ b/src/app/core/components/card-header/card-header-template.html
@@ -1,4 +1,4 @@
-<div layout="row" class="about-header" layout-align="start end">
+<div layout="row" layout-align="start end">
   <h3 flex class="to-upper-case">{{$ctrl.title}}</h3>
   <div layout="row" layout-align="end center">
     <div layout="row">
