--- a/src/app/profile/components/about/about-directive-template.html
+++ b/src/app/profile/components/about/about-directive-template.html
@@ -15,6 +15,7 @@
 
         <!-- Card header -->
         <card-header
+          class="about-header"
           is-save-disabled="aboutEditForm.$invalid"
           show-btn-edit="true"
           title="{{about.title}}"
