--- a/src/app/core/route/states/profile/profile-state.html
+++ b/src/app/core/route/states/profile/profile-state.html
@@ -6,4 +6,5 @@
     </div>
   </div>
   <profile-about username="{{profile.username}}"></profile-about>
+  <timeline username="{{profile.username}}"></timeline>
 </div>
