Added label to timeline

--- a/src/app/profile/components/timeline/MilestoneComponent-template.html
+++ b/src/app/profile/components/timeline/MilestoneComponent-template.html
@@ -1,9 +1,9 @@
 <li layout="row">
   <div flex="25">
-    <p class="md-headline due-date" ng-if="!$ctrl.milestone.endDate">{{$ctrl.milestone.dueDate}}</p>
-    <p class="md-headline end-date" ng-if="$ctrl.milestone.endDate">{{$ctrl.milestone.endDate}}</p>
+    <p class="md-headline due-date" ng-if="!$ctrl.milestone.endDate">{{$ctrl.milestone.dueDate | amDateFormat:'DD.MM.YYYY'}}</p>
+    <p class="md-headline end-date" ng-if="$ctrl.milestone.endDate">{{$ctrl.milestone.endDate | amDateFormat:'DD.MM.YYYY'}}</p>
   </div>
-  <div class="milestone-badge"></div>
+  <div class="milestone-badge">{{$ctrl.mileStoneBadge}}</div>
   <md-card flex="75" class="timeline-card">
     <md-card-title>
       <md-card-title-text>
