--- a/src/app/profile/components/timeline/timeline-styles.scss
+++ b/src/app/profile/components/timeline/timeline-styles.scss
@@ -27,13 +27,18 @@ milestone {
     position: relative;
     .milestone-badge {
       background-color: $lightOrange;
-      width: 15px;
-      height: 15px;
+      width: 35px;
+      height: 35px;
       border-radius: 50%;
       position: absolute;
       left: 20%;
-      margin-left: -26px;
-      top: 35px;
+      margin-left: -36px;
+      top: 27px;
+      color: white;
+      font-size: 1.5em;
+      font-weight: bold;
+      text-align: center;
+      line-height: 35px;
     }
     .md-headline {
       font-size: 1.3em;
