milestone date padding + badge padding

--- a/src/app/profile/components/timeline/MilestoneComponent-template.html
+++ b/src/app/profile/components/timeline/MilestoneComponent-template.html
@@ -1,5 +1,5 @@
 <li layout="row">
-  <div flex="25">
+  <div flex="25" class="dateBox">
     <p class="md-headline due-date" ng-if="!$ctrl.milestone.endDate">{{$ctrl.milestone.dueDate | amDateFormat:'DD.MM.YYYY'}}</p>
     <p class="md-headline end-date" ng-if="$ctrl.milestone.endDate">{{$ctrl.milestone.endDate | amDateFormat:'DD.MM.YYYY'}}<i class="fa fa-check greenIcon" aria-hidden="true"></i></p>
   </div>
