Add showBtnEdit test

--- a/src/app/core/components/card-header/card-header-template.html
+++ b/src/app/core/components/card-header/card-header-template.html
@@ -21,7 +21,7 @@
       <md-button
         class="btnEdit"
         ng-click="$ctrl.editMode()"
-        ng-show="$ctrl.showBtnEdit"
+        ng-if="$ctrl.showBtnEdit"
         class="md-icon-button simple-fade">
         <md-icon md-svg-icon="content:create"></md-icon>
       </md-button>
